fix: adjust height on yourlife element for landscape on mobile

--- a/webdev/styles.css
+++ b/webdev/styles.css
@@ -221,6 +221,7 @@ body {
   background-position: center;
   color:white;
   text-align: center;
+  min-height: 60rem;
 }
 
 .yourlife__title {
